done except fix error message behind image, and login page formatting

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
 }
 
 h1 {
-    text-align: left;
+    text-align: right;
     font-weight: bold;
     font-size: 50px;
     background-color: rgb(0, 0, 0);
@@ -145,9 +145,11 @@ main {
 img {
   position: absolute;
   z-index: 2;
-  float: right;
   right: 0;
   top: 0;
+  width: 160px;
+  height: 160px;
+  object-fit: contain;
   
 
 }
